--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,21 @@
-<mat-card>
-  <div id="content">
-    <img id="" title="NuVision Construction" src="" alt="NuVision Construction">
-    <h1>Nuvision</h1>
-    <h2>By Shawn Drane Construction</h2>
-  </div>
+<mat-card id="container">
+  <header>
+    <h1 id="title">Nuvision</h1>
+    <h3 id="title2">Construction & Development Inc.</h3>
+  </header>
+  <main>
+    <img id="" title="Nuvision Construction" src="" alt="Nuvision Construction">
+    <p>Nuvision Construction & Development Inc. believes in providing the best quality craftmanship through, client communication and transparency, Stringent quality control, and putting our clients best interests first.
+
+      We embrace challenges and the ability to adapt to our clients needs.
+
+      Thank you all for your continued support,
+
+      “NuVision”  Making your Vision, a Reality!”
+
+    </p>
+  </main>
+  <footer>
+    <img id="signature" title="Nuvision Construction" src="../assets/shawnSignature.png" alt="Nuvision Construction">
+  </footer>
 </mat-card>
