--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,32 @@
     <h3 id="title2">Construction & Development Inc.</h3>
   </header>
   <main>
-    <img id="" title="Nuvision Construction" src="" alt="Nuvision Construction">
+    <carousel>
+      <div class="carousel-cell">
+        <img src="../assets/karate-dojo3.jpg" title="Karate Dojo" alt="Karate Dojo">
+      </div>
+      <div class="carousel-cell">
+        <img src="../assets/karate-dojo.jpg" title="Karate Dojo" alt="Karate Dojo">
+      </div>
+      <div class="carousel-cell">
+        <img src="../assets/karate-dojo2.jpg" title="Karate Dojo" alt="Karate Dojo">
+      </div>
+      <div class="carousel-cell">
+        <img src="../assets/karate-dojo4.jpg" title="Karate Dojo" alt="Karate Dojo">
+      </div>
+      <div class="carousel-cell">
+        <img src="../assets/peach-wave.jpg" title="Peach Wave" alt="Karate Dojo">
+      </div>
+      <div class="carousel-cell">
+        <img src="../assets/warehouse.jpg" title="Warehouse1" alt="Warehouse1">
+      </div>
+      <div class="carousel-cell">
+        <img src="../assets/warehouse2.jpg" title="Warehouse2" alt="Warehouse2">
+      </div>
+      <div class="carousel-cell">
+        <img src="../assets/warehouse3.jpg" title="Warehouse3" alt="Warehouse3">
+      </div>
+    </carousel>
     <p>Nuvision Construction & Development Inc. believes in providing the best quality craftmanship through, client communication and transparency, Stringent quality control, and putting our clients best interests first.
 
       We embrace challenges and the ability to adapt to our clients needs.
@@ -17,5 +42,9 @@
   </main>
   <footer>
     <img id="signature" title="Nuvision Construction" src="../assets/shawnSignature.png" alt="Nuvision Construction">
+    <p>Shawn Drane · President/CEO <br>
+      Nuvision Construction & Development <br>
+      Phone: (210) 544-1019 <br>
+      Email: sdrane@nuvisioncd.com</p>
   </footer>
 </mat-card>
