Format MVP Template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<mat-card id="container">
+
   <header>
+    <div>
     <h1 id="title">Nuvision</h1>
     <h3 id="title2">Construction & Development Inc.</h3>
+    </div>
   </header>
   <main>
     <carousel>
@@ -30,7 +32,7 @@
         <img src="../assets/warehouse3.jpg" title="Warehouse3" alt="Warehouse3">
       </div>
     </carousel>
-    <p>Nuvision Construction & Development Inc. believes in providing the best quality craftmanship through, client communication and transparency, Stringent quality control, and putting our clients best interests first.
+    <p>Nuvision Construction & Development Inc. believes in providing the best quality craftsmanship through, client communication and transparency, Stringent quality control, and putting our clients best interests first.
 
       We embrace challenges and the ability to adapt to our clients needs.
 
@@ -47,4 +49,3 @@
       Phone: (210) 544-1019 <br>
       Email: sdrane@nuvisioncd.com</p>
   </footer>
-</mat-card>
