--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,17 +3,12 @@
   box-sizing: border-box;
 }
 
-.container {
-  overflow: hidden;
-}
-
 body {
   font-family: "Baloo 2", sans-serif;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
-
 
 footer {
   margin-top: auto;
@@ -25,6 +20,8 @@ header{
   place-items: center;
   background-color: rgb(45, 57, 100);
   color: #fff;
+  min-height: 110px;
+  height: 8%;
 }
 
 /*header,*/
@@ -37,8 +34,8 @@ footer {
 }
 
 footer p {
-  margin-top: -3%;
-  margin-left: 20%;
+  /*margin-top: -3%;*/
+  margin-left: 15%;
   font-size: 1.1rem;
 }
 
@@ -58,13 +55,15 @@ p {
 }
 
 #title {
+  padding-top: 5%;
   color: rgb(114, 230, 28);
-  margin-bottom: 0;
+  padding-bottom: 1px;
 }
 
+
 #signature {
-  margin-top: -5%;
-  margin-left: 20%;
+  /*margin-top: -5%;*/
+  margin-left: 10%;
   margin-bottom: 0;
   height: 70%;
 }
