--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -30,7 +30,7 @@ footer {
   place-items: center;
   color: black;
   margin-bottom: 0;
-  margin-left: 0;
+  margin-left: 15%;
 }
 
 @media only screen and (max-width: 800px) {
@@ -44,12 +44,20 @@ footer p {
   font-size: 1.1rem;
 }
 
+.carousel-cell-img {
+  height: 1000px;
+  padding-top: 0;
+  min-height: 1000px;
+}
 main {
   padding: 1rem;
-  max-width: 80ch;
-  margin: 0 auto;
+  margin-top: -8%;
 }
 
+main p {
+  padding: 1rem;
+  margin: 5% 50% 0 30%;
+}
 h1 {
   font-size: 4rem;
 }
