Clean up carousel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,51 +1,58 @@
-
-  <header>
-    <div>
+<header>
+  <div>
     <h1 id="title">Nuvision</h1>
     <h3 id="title2">Construction & Development Inc.</h3>
+  </div>
+</header>
+<main>
+  <carousel [objectFit]="'cover'"
+            [cellWidth]="'100%'"
+            [height]="300"
+            [loop]="true"
+            [autoplay]="true"
+            [autoplayInterval]="3500"
+            [pauseOnHover]="true"
+            [arrowsOutside]="true"
+            [transitionDuration]="2500"
+            transitionTimingFunction="ease-in-out"
+            [counter]="true">
+    <div class="carousel-cell">
+      <img src="../assets/karate-dojo3.jpg" title="Karate Dojo" alt="Karate Dojo">
     </div>
-  </header>
-  <main>
-    <carousel>
-      <div class="carousel-cell">
-        <img src="../assets/karate-dojo3.jpg" title="Karate Dojo" alt="Karate Dojo">
-      </div>
-      <div class="carousel-cell">
-        <img src="../assets/karate-dojo.jpg" title="Karate Dojo" alt="Karate Dojo">
-      </div>
-      <div class="carousel-cell">
-        <img src="../assets/karate-dojo2.jpg" title="Karate Dojo" alt="Karate Dojo">
-      </div>
-      <div class="carousel-cell">
-        <img src="../assets/karate-dojo4.jpg" title="Karate Dojo" alt="Karate Dojo">
-      </div>
-      <div class="carousel-cell">
-        <img src="../assets/peach-wave.jpg" title="Peach Wave" alt="Karate Dojo">
-      </div>
-      <div class="carousel-cell">
-        <img src="../assets/warehouse.jpg" title="Warehouse1" alt="Warehouse1">
-      </div>
-      <div class="carousel-cell">
-        <img src="../assets/warehouse2.jpg" title="Warehouse2" alt="Warehouse2">
-      </div>
-      <div class="carousel-cell">
-        <img src="../assets/warehouse3.jpg" title="Warehouse3" alt="Warehouse3">
-      </div>
-    </carousel>
-    <p>Nuvision Construction & Development Inc. believes in providing the best quality craftsmanship through, client communication and transparency, Stringent quality control, and putting our clients best interests first.
+    <div class="carousel-cell">
+      <img src="../assets/karate-dojo.jpg" title="Karate Dojo" alt="Karate Dojo">
+    </div>
+    <div class="carousel-cell">
+      <img src="../assets/karate-dojo2.jpg" title="Karate Dojo" alt="Karate Dojo">
+    </div>
+    <div class="carousel-cell">
+      <img src="../assets/karate-dojo4.jpg" title="Karate Dojo" alt="Karate Dojo">
+    </div>
+    <div class="carousel-cell">
+      <img src="../assets/peach-wave.jpg" title="Peach Wave" alt="Karate Dojo">
+    </div>
+    <div class="carousel-cell">
+      <img src="../assets/warehouse.jpg" title="Warehouse1" alt="Warehouse1">
+    </div>
+    <div class="carousel-cell">
+      <img src="../assets/warehouse2.jpg" title="Warehouse2" alt="Warehouse2">
+    </div>
+  </carousel>
+  <p>Nuvision Construction & Development Inc. believes in providing the best quality craftsmanship through, client
+    communication and transparency, Stringent quality control, and putting our clients best interests first.
 
-      We embrace challenges and the ability to adapt to our clients needs.
+    We embrace challenges and the ability to adapt to our clients needs.
 
-      Thank you all for your continued support,
+    Thank you all for your continued support,
 
-      “NuVision”  Making your Vision, a Reality!”
+    “NuVision” Making your Vision, a Reality!”
 
-    </p>
-  </main>
-  <footer>
-    <img id="signature" title="Nuvision Construction" src="../assets/shawnSignature.png" alt="Nuvision Construction">
-    <p>Shawn Drane · President/CEO <br>
-      Nuvision Construction & Development <br>
-      Phone: (210) 544-1019 <br>
-      Email: sdrane@nuvisioncd.com</p>
-  </footer>
+  </p>
+</main>
+<footer>
+  <img id="signature" title="Nuvision Construction" src="../assets/shawnSignature.png" alt="Nuvision Construction">
+  <p>Shawn Drane · President/CEO <br>
+    Nuvision Construction & Development <br>
+    Phone: (210) 544-1019 <br>
+    Email: sdrane@nuvisioncd.com</p>
+</footer>
