--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -63,6 +63,7 @@ p {
   padding-top: 5%;
   color: rgb(114, 230, 28);
   padding-bottom: 1px;
+  font-family: "Roboto Medium";
 }
 
 @media only screen and (max-width: 800px) {
