Lower Case Nuvision

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
 
     Thank you all for your continued support,
 
-    “NuVision” Making your Vision, a Reality!”
+    “Nuvision” Making your Vision, a Reality!”
 
   </p>
 </main>
